--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
     build:
       context: ./side-front
       dockerfile: Dockerfile
-    volumes:
-      - ./side-front/dist:/usr/share/nginx/html
     depends_on:
       - server
 
@@ -16,11 +14,10 @@ services:
       - "3000"
 
   nginx:
-    image: nginx:1.26.3
+    build:
+      context: ./side-front
+      dockerfile: Dockerfile
     ports:
       - "80:80"
-    volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ./side-front/dist:/usr/share/nginx/html
     depends_on:
       - server
