--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
       dockerfile: Dockerfile
     expose:
       - "3000"
+    restart: always
 
   nginx:
     build:
       context: ./side-front
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "5000:80"
     depends_on:
       - server
