--- a/side-api/package.json
+++ b/side-api/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "ghost-cursor": "^1.4.2",
     "puppeteer": "^24.12.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
